--- a/index.html
+++ b/index.html
@@ -10,26 +10,23 @@
   <div class="page_wrapper">
 <header id="header">
   <div class="logo">
-    <img src="img/logo.jpg" alt="Logo">
+    <img class="logo_coffee" src="img/logo.png" alt="Logo">
   </div>
-  <nav id="nav-bar">
-    <ul>
-      <li>
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li>
-        <a class="nav-link" href="#">How It Works</a>
-      </li>
-      <li>
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-lg bg-light">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="#">Features</a>
+          <a class="nav-link" href="#">How It Works</a>
+          <a class="nav-link" href="#">Pricing</a>
+        </div>
+      </div>
+    </div>
   </nav>
 </header>
 <div class="container"></div>
 <section id="hero">
-  <h2> CRAFT COFEE</h2>
-    <h2>Coffe Roasting</h2>
+  <h2 class="text_craft"> CRAFT COFEE</h2>
+    <h2 class="text_craft">Coffe Roasting</h2>
     <p>Send me price on E-mail</p>
   <form id="form" action="https://www.freecodecamp.com/email-submit">
   <input name="email" id="email" type="email"
