--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
   </nav>
 </header>
 <div class="container"></div>
-<section id="hero">
-  <h2 class="text_craft"> CRAFT COFEE</h2>
-    <h2 class="text_craft">Coffe Roasting</h2>
-    <p>Send me price on E-mail</p>
-  <form id="form" action="https://www.freecodecamp.com/email-submit">
-  <input name="email" id="email" type="email"
+<section class="hero">
+  <div class="text_craft">
+    <h2>COFFEE ROASTING</h2>
+    <p class="email-text">Send price on e-mail</p>
+</div>
+  <form class="form" action="https://www.freecodecamp.com/email-submit">
+  <input name="email" class="email" type="email"
   placeholder="Enter your email adress" required>
   <input id="submit" type="submit" value="Get Started" class="btn">
   </form>
@@ -87,8 +88,8 @@
 
   <section class="pricing">
     <div class="product" id="tenor">
-      <div class="level">TENOR TROMBONE</div>
-      <h2>600$<h2>
+      <div class="level">COLUMBIA</div>
+      <h2>20$<h2>
       <ol>
         <li>Lorem ipsum</li>
         <li>Lorem ipsum</li>
@@ -98,8 +99,8 @@
       <button class="btn">Select</button>
     </div>
     <div class="product" id="bass">
-      <div class="level">BASS TROMBONE</div>
-      <h2>900$<h2>
+      <div class="level">ETHIOPIA</div>
+      <h2>10$<h2>
       <ol>
         <li>Lorem ipsum</li>
         <li>Lorem ipsum</li>
@@ -109,8 +110,8 @@
       <button class="btn">Select</button>
     </div>
     <div class="product" id="valve">
-      <div class="level">VALVE TROMBONE</div>
-      <h2>1200$<h2>
+      <div class="level">KENYA</div>
+      <h2>25$<h2>
       <ol>
         <li>Plays similar to a Trumpet</li>
         <li>Great for Jazz Bands</li>
